--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
@@ -1,234 +1,107 @@
-<div class="ui grid">
-    <div class="four wide column">
-        <div class="ui stacked segments">
-            <div class="ui segment">
-                <p style="cursor: pointer;">การเงิน</p>
+<div class="ui centered grid">
+    <div class="twelve wide column">
+        <div class="ui raised segments">
+            <div class="ui center aligned segment">
+                <h4>แบบสอบทานระบบการควบคุมภายใน</h4>
             </div>
-            <div class="ui segment">
-                <p style="cursor: pointer;">เจ้าหนี้</p>
-            </div>
-            <div class="ui segment">
-                <p style="cursor: pointer;">ระบบ e-paymanet</p>
-            </div>
-            <div class="ui segment">
-                <p style="cursor: pointer;">ระบบ GFMIS</p>
-            </div>
-            <div class="ui segment">
-                <p style="cursor: pointer;">ระบบบัญชีเกณฑ์คงค้าง</p>
-            </div>
-            <div class="ui segment">
-                <p style="cursor: pointer;">จัดซื้อจัดจ้างพัสดุโดยวิธีคัดเลือก</p>
-            </div>
-            <div class="ui segment">
-                <p style="cursor: pointer;">จัดซื้อจัดจ้างพัสดุโดยวิธีเฉพาะเจาะจง</p>
+            <div class="ui centered segment grid">
+                <form class="ui twelve wide form column" (submit)="search($event)">
+                    <div class="two inline fields">
+                        <div class="field">
+                            <label>สรรพสามิตภาค</label>
+                            <div class="ui input">
+                                <select class="ui selection dropdown">
+                                    <option value="">เลือกภาค</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label>ผู้สอบทาน</label>
+                            <input type="text" placeholder="ผู้สอบทาน">
+                        </div>
+                    </div>
+                    <div class="two inline fields">
+                        <div class="field">
+                            <label>สรรพสามิตพื้นที่</label>
+                            <div class="ui input">
+                                <select class="ui selection dropdown">
+                                    <option value="">เลือกพื้นที่</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label>วันที่</label>
+                            <div class="ui input">
+                                <div class="ui calendar" id="calendar">
+                                    <div class="ui input left icon">
+                                        <i class="time icon"></i>
+                                        <input type="calendar" readonly="" id="calendar_data" name="calendar_data" [attr.required]="true" autocomplete="off">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ui centered grid inline field">
+                        <div class="two wide column">
+                            <button class="ui mini button primary" type="submit">ค้นหา</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-
-    <form class="twelve wide column" ngNativeValidate (submit)="onSubmit($event, i)">
-        <div class="ui segment">
-            <div class="ui form">
-
-                <div class="inline fields">
-                    <div class="eight wide field">&nbsp;&nbsp;&nbsp;
-                        <label class="custom-label-w-20">สรรพสามิตภาค</label>
-                        <select class="ui search dropdown" id="sector">
-                            <option value="">State</option>
-                            <option value="AL">Alabama</option>
-                            <option value="AK">Alaska</option>
-                            <option value="AZ">Arizona</option>
-                            <option value="AR">Arkansas</option>
-                            <option value="CA">California</option>
-                            <option value="CO">Colorado</option>
-                            <option value="CT">Connecticut</option>
-                            <option value="DE">Delaware</option>
-                            <option value="DC">District Of Columbia</option>
-                            <option value="FL">Florida</option>
-                            <option value="GA">Georgia</option>
-                            <option value="HI">Hawaii</option>
-                            <option value="ID">Idaho</option>
-                            <option value="IL">Illinois</option>
-                            <option value="IN">Indiana</option>
-                            <option value="IA">Iowa</option>
-                            <option value="KS">Kansas</option>
-                            <option value="KY">Kentucky</option>
-                            <option value="LA">Louisiana</option>
-                            <option value="ME">Maine</option>
-                            <option value="MD">Maryland</option>
-                            <option value="MA">Massachusetts</option>
-                            <option value="MI">Michigan</option>
-                            <option value="MN">Minnesota</option>
-                            <option value="MS">Mississippi</option>
-                            <option value="MO">Missouri</option>
-                            <option value="MT">Montana</option>
-                            <option value="NE">Nebraska</option>
-                            <option value="NV">Nevada</option>
-                            <option value="NH">New Hampshire</option>
-                            <option value="NJ">New Jersey</option>
-                            <option value="NM">New Mexico</option>
-                            <option value="NY">New York</option>
-                            <option value="NC">North Carolina</option>
-                            <option value="ND">North Dakota</option>
-                            <option value="OH">Ohio</option>
-                            <option value="OK">Oklahoma</option>
-                            <option value="OR">Oregon</option>
-                            <option value="PA">Pennsylvania</option>
-                            <option value="RI">Rhode Island</option>
-                            <option value="SC">South Carolina</option>
-                            <option value="SD">South Dakota</option>
-                            <option value="TN">Tennessee</option>
-                            <option value="TX">Texas</option>
-                            <option value="UT">Utah</option>
-                            <option value="VT">Vermont</option>
-                            <option value="VA">Virginia</option>
-                            <option value="WA">Washington</option>
-                            <option value="WV">West Virginia</option>
-                            <option value="WI">Wisconsin</option>
-                            <option value="WY">Wyoming</option>
-                        </select>
-                    </div>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <div class="eight wide field">
-                        <label class="custom-label-w-10">ผู้สอบทาน</label>
-                        <input type="text" class="custom" id="test" required>
-                    </div>
+    <div class="twelve wide column" *ngIf="questionnaire.length > 0">
+        <div class="ui styled fluid accordion" id="acc">
+            <div *ngFor="let qtn of questionnaire; let i = index">
+                <div class="{{ i==0 ? 'active' : ''}} title">
+                    <h4 class="text-center">{{ qtn.title }}</h4>
                 </div>
+                <div class="{{ i==0 ? 'active' : ''}} content">
+                    <table class="ui celled table">
+                        <thead>
+                            <tr>
+                                <th class="center aligned" rowspan="2">ที่</th>
+                                <th class="center aligned" rowspan="2">รายการ</th>
+                                <th class="center aligned">มี / ใช่</th>
+                                <th class="center aligned">ไม่มี / ไม่ใช่</th>
+                            </tr>
+                            <tr>
+                                <th class="border center aligned">สมบูรณ์</th>
+                                <th class="center aligned">ไม่สมบูรณ์</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let detail of qtn.detail; let i = index" class="{{ detail.headerId ? 'head' : '' }}">
 
-                <div class="inline fields">
-                    <div class="eight wide field">&nbsp;&nbsp;&nbsp;
-                        <label class="custom-label-w-20">สรรพสามิตพื้นที่</label>
-                        <select class="ui search dropdown" id="area">
-                            <option value="">State</option>
-                            <option value="AL">Alabama</option>
-                            <option value="AK">Alaska</option>
-                            <option value="AZ">Arizona</option>
-                            <option value="AR">Arkansas</option>
-                            <option value="CA">California</option>
-                            <option value="CO">Colorado</option>
-                            <option value="CT">Connecticut</option>
-                            <option value="DE">Delaware</option>
-                            <option value="DC">District Of Columbia</option>
-                            <option value="FL">Florida</option>
-                            <option value="GA">Georgia</option>
-                            <option value="HI">Hawaii</option>
-                            <option value="ID">Idaho</option>
-                            <option value="IL">Illinois</option>
-                            <option value="IN">Indiana</option>
-                            <option value="IA">Iowa</option>
-                            <option value="KS">Kansas</option>
-                            <option value="KY">Kentucky</option>
-                            <option value="LA">Louisiana</option>
-                            <option value="ME">Maine</option>
-                            <option value="MD">Maryland</option>
-                            <option value="MA">Massachusetts</option>
-                            <option value="MI">Michigan</option>
-                            <option value="MN">Minnesota</option>
-                            <option value="MS">Mississippi</option>
-                            <option value="MO">Missouri</option>
-                            <option value="MT">Montana</option>
-                            <option value="NE">Nebraska</option>
-                            <option value="NV">Nevada</option>
-                            <option value="NH">New Hampshire</option>
-                            <option value="NJ">New Jersey</option>
-                            <option value="NM">New Mexico</option>
-                            <option value="NY">New York</option>
-                            <option value="NC">North Carolina</option>
-                            <option value="ND">North Dakota</option>
-                            <option value="OH">Ohio</option>
-                            <option value="OK">Oklahoma</option>
-                            <option value="OR">Oregon</option>
-                            <option value="PA">Pennsylvania</option>
-                            <option value="RI">Rhode Island</option>
-                            <option value="SC">South Carolina</option>
-                            <option value="SD">South Dakota</option>
-                            <option value="TN">Tennessee</option>
-                            <option value="TX">Texas</option>
-                            <option value="UT">Utah</option>
-                            <option value="VT">Vermont</option>
-                            <option value="VA">Virginia</option>
-                            <option value="WA">Washington</option>
-                            <option value="WV">West Virginia</option>
-                            <option value="WI">Wisconsin</option>
-                            <option value="WY">Wyoming</option>
-                        </select>
-                    </div>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <div class="eight wide field">
-                        <label class="custom-label-w-10">วันที่</label>
-                        <input type="text" class="custom" id="date" required>
-                    </div>
-                </div>
-                <br/>
+                                <td *ngIf="detail.headerId" class="center aligned">{{detail.order}}</td>
+                                <td *ngIf="detail.headerId" colspan="3">{{detail.content}}</td>
 
-                <div class="ui top center aligned attached header">
-                    <span>แบบสอบทานระบบการควบคุมภายใน</span>
-                    <p>ด้านการเงิน</p>
-                </div>
-                <br/>
-
-                <div class="ui center aligned grid">
-                    <div class="centered fifteen wide column ">
-                        <table id="datatable" class="ui small celled table aligned hover">
-                            <thead>
-                                <tr>
-                                    <th rowspan="2" style="text-align: center !important">ที่</th>
-                                    <th rowspan="2" style="text-align: center !important">รายการ</th>
-                                    <th style="text-align: center !important">มี/ใช่</th>
-                                    <th style="text-align: center !important">ไม่มี/ไม่ใช่</th>
-
-                                </tr>
-                                <tr>
-                                    <th style="text-align: center !important; border-left: 1px solid rgba(34,36,1,.1);">สมบูรณ์</th>
-                                    <th style="text-align: center !important">สมบูรณ์</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let list of DetailTest1 let i = index" [attr.data-index]="i">
-                                    <td class="center">{{i+1}}</td>
-                                    <td class="center">{{list}}</td>
-                                    <td class="center">
-                                        <!-- <input type="radio" name="first{{i}}" id="first{{i}}"> -->
-                                        <div class="ui checkbox">
-                                            <input type="radio" name="frequency{{i}}" id="frequency{{i}}" required>
-                                            <label></label>
-                                        </div>
-                                    </td>
-                                    <td class="center">
-                                        <!-- <input type="radio" name="second{{i}}" id="second{{i}}"> -->
-                                        <div class="ui checkbox">
-                                            <input type="radio" name="frequency{{i}}" id="frequencyY{{i}}" required>
-                                            <label></label>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <!-- <tr>
-                                    <td>2</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                    <td>Cell</td>
-                                </tr> -->
-                            </tbody>
-                        </table>
-
+                                <td *ngIf="detail.detailId" class="right aligned">{{detail.order}}</td>
+                                <td *ngIf="detail.detailId">{{detail.content}}</td>
+                                <td *ngIf="detail.detailId">===</td>
+                                <td *ngIf="detail.detailId">===</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="ui form" *ngIf="qtn.conclusion">
                         <div class="field">
-                            <label style="text-align: left;">สรุปผลการสอบทาน</label>
-                            <textarea rows="4" id="conclude" required></textarea>
+                            <label>สรุปผลการสอบทาน</label>
+                            <div class="ui input">
+                                <textarea name="" id="" rows="4"></textarea>
+                            </div>
                         </div>
-
-                        <button type="submit" class="ui small primary button">
-                            <i class="save icon"></i>บันทึก
-                        </button>
-
                     </div>
                 </div>
-
             </div>
         </div>
-    </form>
+        <div class="ui grid">
+            <div class="save-btn center aligned column">
+                <button class="ui mini primary button">บันทึก</button>
+            </div>
+        </div>
+    </div>
 </div>
